# Windows-Portable-Device-Viewer

./: CMakeLists.txt  README.md  appveyor.yml  codecov.yml  example.cpp
WPD/: WPDEnumerator.cpp  WPDEnumerator.h  WPDException.h  WPDevice.cpp  WPDevice.h
ci/: build.ps1  install.ps1  test.ps1
examples/: CMakeLists.txt  enumerate_devices.cpp  enumerate_files.cpp  file_operations.cpp
include/: WPDDevice.h  WPDEnumerator.h  WPDException.h  WPDObject.h  WPDObjectIterator.h  WPDUtils.h
src/: WPDDevice.cpp  WPDEnumerator.cpp  WPDException.cpp  WPDObject.cpp  WPDObjectIterator.cpp  WPDUtils.cpp
tests/: CMakeLists.txt  WPDDevice_test.cpp  WPDEnumerator_test.cpp  custom_matchers.h  main.cpp  mock_wrappers.h  shared_tests.h  utils.cpp  utils.h
